sj-lab-webserver/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "sj-lab-webserver.fullname" . } }
spec:
  selector:
    app: { { include "sj-lab-webserver.name" . } }
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
