sj-lab-webserver/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { include "sj-lab-webserver.fullname" . } }
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: { { .Values.ingress.host } }
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: { { include "sj-lab-webserver.fullname" . } }
                port:
                  number: 80
